# personalsite

./: .gitignore  pyproject.toml  requirements.txt
home/: admin.py  models.py  views.py
home/migrations/: 0001_initial.py  0002_attendance_education_location.py  0003_auto_20210808_1945.py  0004_auto_20210808_1959.py
home/templates/home/: base.html  index.html
personalsite/: settings.py
